# AndroidPortedFFMPEG

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ramadan/portedffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ramadan/portedffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ramadan/portedffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
